--- a/package.json
+++ b/package.json
@@ -1,45 +1,49 @@
 {
-  "name": "@10up/tenup-scaffold",
-  "version": "1.0.0",
+  "name": "@10up/animations",
+  "version": "0.0.1",
   "author": "10up",
   "description": "Component scaffold to use as a template for building new components.",
-  "main": "./src/tenup-scaffold.js",
-  "style": "./dist/tenup-scaffold.css",
+  "main": "./dist/animations.js",
+  "style": "./dist/animations.css",
   "scripts": {
-    "start": "npm install && npm run build",
-    "build": "webpack",
-    "watch": "webpack --watch"
+    "start": "npm install && npm audit fix && npm update && npm run build",
+    "build": "NODE_ENV=production webpack",
+    "watch": "NODE_ENV=development webpack --watch"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/10up/tenup-scaffold.git"
+    "url": "git+https://github.com/10up/component-animations.git"
   },
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/10up/tenup-scaffold/issues"
+    "url": "https://github.com/10up/component-animations/issues"
   },
-  "homepage": "https://github.com/10up/tenup-scaffold#readme",
+  "homepage": "https://github.com/10up/component-animations#readme",
   "devDependencies": {
-    "@10up/eslint-config": "^1.0.6",
-    "@babel/cli": "^7.0.0",
-    "@babel/core": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
+    "@10up/eslint-config": "^1.0.9",
+    "@10up/stylelint-config": "^1.0.9",
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.8.6",
+    "@babel/polyfill": "^7.8.3",
+    "@babel/preset-env": "^7.8.6",
     "babel-eslint": "^9.0.0",
-    "babel-loader": "^8.0.2",
-    "browser-sync": "^2.24.7",
-    "browser-sync-webpack-plugin": "^2.2.2",
+    "babel-loader": "^8.0.6",
+    "core-js": "^3.6.4",
     "css-loader": "^1.0.0",
-    "eslint": "^5.5.0",
-    "eslint-loader": "^2.1.0",
-    "mini-css-extract-plugin": "^0.4.2",
-    "postcss": "^7.0.2",
+    "eslint": "^5.16.0",
+    "eslint-loader": "^2.2.1",
+    "mini-css-extract-plugin": "^0.4.5",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "postcss": "^7.0.27",
     "postcss-import": "^12.0.0",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^5.3.0",
-    "webpack": "^4.17.2",
-    "webpack-cli": "^3.1.0"
-  },
-  "dependencies": {
-    "@babel/polyfill": "^7.0.0"
+    "stylelint": "^9.10.1",
+    "stylelint-config-wordpress": "^14.0.0",
+    "stylelint-declaration-use-variable": "^1.7.2",
+    "stylelint-order": "^2.2.1",
+    "stylelint-webpack-plugin": "^1.1.2",
+    "webpack": "^4.42.0",
+    "webpack-cli": "^3.3.11"
   }
 }
