--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
-    - name: Install node v13
+    - name: Install node
       uses: actions/setup-node@v1
       with:
         node-version: 11
